fix(material/paginator): button icons blending in with background in high contrast mode on Chromium browsers (#22385)
Setting `fill: currentColor` on an SVG element causes it to blend in with the background on Chromium-based browsers. These changes add a fallback color.

--- a/src/material-experimental/mdc-paginator/paginator.scss
+++ b/src/material-experimental/mdc-paginator/paginator.scss
@@ -88,6 +88,10 @@ $button-icon-size: 28px;
   .mat-mdc-icon-button[disabled] .mat-mdc-paginator-icon,
   .mat-mdc-paginator-icon {
     fill: currentColor;
+
+    // On Chromium browsers the `currentColor` blends in with the
+    // background for SVGs so we have to fall back to `CanvasText`.
+    fill: CanvasText;
   }
 
   .mat-mdc-paginator-range-actions .mat-mdc-icon-button {
