--- a/src/material/paginator/paginator.scss
+++ b/src/material/paginator/paginator.scss
@@ -1,3 +1,5 @@
+@use '../../cdk/a11y/a11y';
+
 $padding: 0 8px;
 $page-size-margin-right: 8px;
 
@@ -72,5 +74,11 @@ $button-icon-size: 28px;
 
   [dir='rtl'] & {
     transform: rotate(180deg);
+  }
+
+  @include a11y.high-contrast(active, off) {
+    // On Chromium browsers the `currentColor` blends in with the
+    // background for SVGs so we have to fall back to `CanvasText`.
+    fill: CanvasText;
   }
 }
